--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
             </span>
 
             <div class="glossary-items">
-                <div class="glossary-letters"></div>
+                <ul class="glossary-letters" id="glossary-letters">
+                   
+                </ul>
                 <div class="glossary-meaning"></div>
             </div>
         </div>
