Glossário - Primeiro Commit

--- a/index.html
+++ b/index.html
@@ -105,13 +105,7 @@
             </span>
             <div id="menu-lista" >
                 <ul class="menu-items" id="menu-items">
-                    <li class="menu-item" id="link_menu">
-                        
-                    </li>
-                    <!--<li onclick="" id="link_menu2" class="links_menu">Procedimentos</li>
-                    <li onclick="" id="link_menu3" class="links_menu">Exigências</li>
-                    <li onclick="" id="link_menu4" class="links_menu">Responsabilidades e funções</li>
-                    <li onclick="" id="link_menu5" class="links_menu">Encerramento</li>-->               
+                    <li class="menu-item" id="link_menu"></li> 
                 </ul>
             </div>         
         </div>
@@ -126,7 +120,9 @@
                 <ul class="glossary-letters" id="glossary-letters">
                    
                 </ul>
-                <div class="glossary-meaning"></div>
+                <ul class="glossary-meaning" id="glossary-meaning">
+
+                </ul>
             </div>
         </div>
 </div>
